# agentboundary

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
adapters/anthropic-permission-policy/: README.md  adapter.py  mapping.md  results.md  test_adapter.py
adapters/cloudflare-hitl/: README.md  adapter.py  mapping.md  results.md  test_adapter.py
adapters/langsmith-gateway/: README.md  adapter.py  mapping.md  results.md  test_adapter.py
adapters/microsoft-agt/: README.md  adapter.py  mapping.md  results.md  test_adapter.py
docs/receipts/: README.md  github-merge.json  spring-service-mutation.json  stripe-refund.json
docs/schemas/: action-receipt-v0.1.json  action-receipt-v0.2-alpha.json
docs/spec/: owasp-mapping.md  threat-model.md  v0.1.md  v0.2-alpha.md
npm/: README.md  package.json
npm/test/: dispatch.test.js
scenarios/: 01-merge-allow.yaml  02-mutation-require-approval.yaml  03-refund-under-limit.yaml  04-merge-deny.yaml  05-refund-escalate.yaml  06-missing-policy-block.yaml  07-bad-timestamp-format.yaml  08-arguments-hash-mismatch.yaml  09-receipt-hash-mismatch.yaml  10-claim-level-3-without-hash.yaml  11-stale-approval.yaml  12-unauthorized-approver.yaml  13-replay-receipt-id.yaml  14-completed-before-issued.yaml  15-policy-version-downgrade.yaml  16-deny-with-execution-success.yaml  17-approval-inside-window.yaml  18-known-policy-store-passes.yaml  19-actor-human-validates.yaml  20-numeric-arguments-validate.yaml  21-multiline-arguments-validate.yaml  22-missing-execution-block.yaml  23-malformed-receipt-id.yaml  24-mutated-approver-no-rehash.yaml  25-clean-receipt-id-passes-replay.yaml  26-completeness-below-threshold.yaml  27-completeness-score-mismatch.yaml  28-honest-completeness-passes.yaml  29-valid-chain-passes.yaml  30-broken-chain-fires.yaml  31-allow-with-blocked-execution.yaml  32-fork-chain-shared-prior.yaml  33-unicode-arguments-validate.yaml  34-empty-arguments-validate.yaml  35-staging-environment-validates.yaml  36-dev-environment-validates.yaml  37-execution-failure-with-error-code.yaml  38-approval-without-context.yaml  39-nested-arguments-canonical.yaml  40-large-arguments-validate.yaml
scripts/: generate-comparative-matrix.py
src/agentboundary/: __init__.py  __main__.py  _schema.py  cli.py  conformance.py  hashing.py  provenance.py  runtime.py  validator.py
src/agentboundary/scenarios/: __init__.py  _meta-schema.json  loader.py
tests/: conftest.py  test_cli.py  test_cli_slow.py  test_conformance.py  test_hashing.py  test_package.py  test_provenance.py  test_runtime.py  test_scenarios_e2e.py  test_scenarios_loader.py  test_schema_loader.py  test_validator_negative.py  test_validator_positive.py  test_wheel_install.py
