[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "agentboundary"
version = "0.1.0"
description = "Open spec and conformance suite for proving AI-initiated production actions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "JamJet Labs", email = "sunil@jamjet.dev" },
]
keywords = ["agent", "agent-action-control", "action-receipts", "agentboundary", "ai-safety", "ai-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema[format-nongpl]>=4.21,<5.0",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jamjet-labs/agentboundary"
Repository = "https://github.com/jamjet-labs/agentboundary"
Issues = "https://github.com/jamjet-labs/agentboundary/issues"

[project.scripts]
agentboundary = "agentboundary.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentboundary"]

# Include the schema + worked example receipts in the wheel so installing
# the package gives you the spec authority + canonical examples without a
# second download.
[tool.hatch.build.targets.wheel.force-include]
"docs/schemas/action-receipt-v0.1.json" = "agentboundary/_data/action-receipt-v0.1.json"
"docs/schemas/action-receipt-v0.2-alpha.json" = "agentboundary/_data/action-receipt-v0.2-alpha.json"
"docs/receipts/github-merge.json" = "agentboundary/_data/examples/github-merge.json"
"docs/receipts/spring-service-mutation.json" = "agentboundary/_data/examples/spring-service-mutation.json"
"docs/receipts/stripe-refund.json" = "agentboundary/_data/examples/stripe-refund.json"
"scenarios" = "agentboundary/_data/scenarios"
"src/agentboundary/scenarios/_meta-schema.json" = "agentboundary/scenarios/_meta-schema.json"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "build>=1.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "build>=1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov=agentboundary --cov-report=term-missing {args:tests}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jsonschema>=4.21",
    "click>=8.1",
    "PyYAML>=6.0",
    "types-PyYAML",
]

[tool.hatch.envs.lint.scripts]
style = "ruff check {args:src tests}"
fmt = "ruff format {args:src tests}"
type = "mypy --strict src/agentboundary"
all = ["style", "fmt --check", "type"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: end-to-end tests that spawn subprocesses (opt in with -m slow)",
]
